2013-05-09  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/main.c: Improve display of device path with -T option.

	* man/minicom.1: Update docs for -T option.

2013-02-12  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* po/zh_TW.po: Update from Translation team.

2013-02-07  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/main.c, src/minicom.h, src/updown.c:
	  [#314018] [PATCH] Disabling lockfile warnings when the
	  device disappears (ttyUSB hot-unplug), by  Jaromir Capik

2013-02-06  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* NEWS: Release 2.6.2

2013-02-04  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* po/zh_TW.po: Update from Translation Project.

2013-01-27  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/config.c: Do not allow setting of lock file path when
	  built with lockdev. Patch by Jaromir Capik. Redhat #754235

	* src/configsym.h: Increase config value size to be able to
	  store longer file names.

	* src/minicom.c: Comment spelling fix.

2013-01-14  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* po/ja.po: Update from TP.

2013-01-10  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/ascii-xfr.c, src/config.c, src/dial.c, src/help.c, src/updown.c, src/wkeys.c: Fix warnings with more modern warning options ("hardening").


	* po/fi.po: Update from Translation Project.

2013-01-09  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/util.c: Do not treat : as a device path delimiter, thus now
	  supporting path with colon in them, like
	  /dev/serial/by-path/.... Debian 697624

2012-12-21  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* po/nb.po: Update from TP.

2012-12-20  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* po/ja.po: Update from TP.

2012-12-10  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* po/vi.po: Update from TP.

2012-12-09  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* po/de.po: Update from TP.

2012-12-08  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>
