@@ -3,6 +3,12 @@ This file lists the most important changes to
 the previous released version. For a full list of changes
 please refer to the ChangeLog file.
 
+For for version 2.6.2.90:
+ - Configurable status line via -F option, see manpage for a listing
+   of format specifier.
+ - Improve display of device name in status line.
+ - Fixes.
+
 New for version 2.6.2:
  - Alternative hex output (to be improved)
  - Print creation date of serial device file (if < 20 hrs), useful for
